{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 180,
  "lineage": "0f276d31-89f5-76cf-0165-bb6d286497e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-033e1a7e28b41b333",
            "domain": "vpc",
            "id": "eipalloc-04337d5c34972fc73",
            "instance": "i-03ca7649fd59358af",
            "network_interface": "eni-0aa3b5dfaa7e5bfd4",
            "private_dns": "ip-10-0-1-188.ec2.internal",
            "private_ip": "10.0.1.188",
            "public_dns": "ec2-3-229-248-164.compute-1.amazonaws.com",
            "public_ip": "3.229.248.164",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b69ea66ff7391e80",
            "arn": "arn:aws:ec2:us-east-1:390593569829:instance/i-03ca7649fd59358af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "jenkins",
            "id": "i-03ca7649fd59358af",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa3b5dfaa7e5bfd4",
            "private_dns": "ip-10-0-1-188.ec2.internal",
            "private_ip": "10.0.1.188",
            "public_ip": "52.91.197.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fea5dfd5f422d48b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e41c6ddfb83a025",
            "tags": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e88ff11091f4f6d2"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.jenkins",
            "aws_security_group.jenkins",
            "aws_subnet.public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f31d55a72ba66768",
            "owner_id": "390593569829",
            "vpc_id": "vpc-0ceaa96929bab79f2"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0171c51623fd5c249",
            "owner_id": "390593569829",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f31d55a72ba66768",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0ceaa96929bab79f2"
          },
          "depends_on": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057a7f8016f47f604",
            "route_table_id": "rtb-0171c51623fd5c249",
            "subnet_id": "subnet-06e41c6ddfb83a025"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:security-group/sg-0e88ff11091f4f6d2",
            "description": "ec2 instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e88ff11091f4f6d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jenkins",
            "name_prefix": null,
            "owner_id": "390593569829",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ceaa96929bab79f2"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:subnet/subnet-06e41c6ddfb83a025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06e41c6ddfb83a025",
            "map_public_ip_on_launch": true,
            "owner_id": "390593569829",
            "tags": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0ceaa96929bab79f2"
          },
          "depends_on": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:390593569829:vpc/vpc-0ceaa96929bab79f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c5347705efed0f5",
            "default_route_table_id": "rtb-0d02fe704a0f7219f",
            "default_security_group_id": "sg-0dbb422e7594e0b95",
            "dhcp_options_id": "dopt-0627d0db77da0a4b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ceaa96929bab79f2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d02fe704a0f7219f",
            "owner_id": "390593569829",
            "tags": {
              "Name": "Terraform"
            }
          }
        }
      ]
    }
  ]
}